--- a/app/src/main/res/layout/fm03.xml
+++ b/app/src/main/res/layout/fm03.xml
@@ -11,15 +11,18 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/Swip">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+        android:id="@+id/NBASwip">
+        <ListView
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="#ffff0000"
-            android:dividerHeight="10dp" >
+            android:divider="@color/background_dim_overlay"
+            android:dividerHeight="8dp"
+            >
 
-        </android.support.v7.widget.RecyclerView>
+        </ListView>
+
+
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
