--- a/app/src/main/res/layout/fm03.xml
+++ b/app/src/main/res/layout/fm03.xml
@@ -1,25 +1,276 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background">
+    android:background="@color/cardview_dark_background"
+
+    android:orientation="vertical">
+
     <android.support.v4.widget.Space
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        />
+        android:layout_height="50dp" />
+
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/NBASwip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/NBASwip">
-        <ListView
-            android:id="@+id/NBAList"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@color/background_dim_overlay"
-            android:dividerHeight="8dp"
-            >
-        </ListView>
+            android:layout_height="wrap_content"
+            android:background="@color/background_dim_overlay"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp">
+
+                <RelativeLayout
+                    android:id="@+id/match"
+                    android:layout_width="340dp"
+                    android:layout_height="230dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@color/cardview_light_background">
+
+                    <ImageView
+                        android:id="@+id/main_team_img"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="50dp"
+                        android:layout_marginTop="50dp"
+                        android:background="@color/background_dim_overlay" />
+
+                    <TextView
+                        android:id="@+id/main_team"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@id/main_team_img"
+                        android:layout_alignLeft="@id/main_team_img"
+                        android:textColor="#000000" />
+
+                    <LinearLayout
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/time1"
+                                android:textColor="#000000"
+                                android:layout_centerHorizontal="true"
+                                android:layout_alignParentTop="true"/>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true">
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/player01logo"
+                                        android:layout_width="28dp"
+                                        android:layout_height="28dp" />
+                                </LinearLayout>
+
+                                <android.support.v4.widget.Space
+                                    android:layout_width="20dp"
+                                    android:layout_height="match_parent" />
+
+                                <RelativeLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerVertical="true"
+                                        android:textColor="#000000"
+                                        android:text="VS"/>
+
+                                </RelativeLayout>
+
+                                <android.support.v4.widget.Space
+                                    android:layout_width="20dp"
+                                    android:layout_height="match_parent" />
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/player02logo"
+                                        android:layout_width="28dp"
+                                        android:layout_height="28dp" />
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/time2"
+                                android:textColor="#000000"
+                                android:layout_centerHorizontal="true"
+                                android:layout_alignParentTop="true"/>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true">
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/player03logo"
+                                        android:layout_width="28dp"
+                                        android:layout_height="28dp" />
+                                </LinearLayout>
+
+                                <android.support.v4.widget.Space
+                                    android:layout_width="20dp"
+                                    android:layout_height="match_parent" />
+
+                                <RelativeLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerVertical="true"
+                                        android:textColor="#000000"
+                                        android:text="VS"/>
+
+                                </RelativeLayout>
+
+                                <android.support.v4.widget.Space
+                                    android:layout_width="20dp"
+                                    android:layout_height="match_parent" />
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/player04logo"
+                                        android:layout_width="28dp"
+                                        android:layout_height="28dp" />
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:id="@+id/time3"
+                                android:textColor="#000000"
+                                android:layout_centerHorizontal="true"
+                                android:layout_alignParentTop="true"/>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_centerHorizontal="true"
+                                android:layout_centerVertical="true">
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/player05logo"
+                                        android:layout_width="28dp"
+                                        android:layout_height="28dp" />
+                                </LinearLayout>
+
+                                <android.support.v4.widget.Space
+                                    android:layout_width="20dp"
+                                    android:layout_height="match_parent" />
+
+                                <RelativeLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_centerVertical="true"
+                                        android:textColor="#000000"
+                                        android:text="VS"/>
+
+                                </RelativeLayout>
+
+                                <android.support.v4.widget.Space
+                                    android:layout_width="20dp"
+                                    android:layout_height="match_parent" />
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/player06logo"
+                                        android:layout_width="28dp"
+                                        android:layout_height="28dp" />
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+
+                        </RelativeLayout>
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <ListView
+                android:id="@+id/NBAList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@color/background_dim_overlay"
+                android:dividerHeight="8dp">
+
+            </ListView>
+
+
+        </LinearLayout>
+
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
