--- a/app/src/main/res/layout/fm03_item.xml
+++ b/app/src/main/res/layout/fm03_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="500dp"
     android:background="@color/background_dim_overlay">
 
-    <android.support.v7.widget.CardView
+    <!--<android.support.v7.widget.CardView
         android:layout_width="340dp"
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
@@ -13,11 +13,12 @@
         android:elevation="8dp"
         android:gravity="center"
         android:background="@color/cardview_light_background"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp">-->
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_width="340dp"
+            android:layout_height="150dp"
             android:background="@color/cardview_light_background"
             >
             <LinearLayout
@@ -92,8 +93,8 @@
 
         </RelativeLayout>
 
-
-    </android.support.v7.widget.CardView>
+<!--
+    </android.support.v7.widget.CardView>-->
 
 
 </RelativeLayout>
