--- a/app/src/main/res/layout/fm03.xml
+++ b/app/src/main/res/layout/fm03.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background"
+    android:background="@color/background_dim_overlay"
 
     android:orientation="vertical">
 
@@ -20,7 +20,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/background_dim_overlay"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -37,19 +36,13 @@
 
                     <ImageView
                         android:id="@+id/main_team_img"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginLeft="50dp"
-                        android:layout_marginTop="50dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="30dp"
                         android:background="@color/background_dim_overlay" />
 
-                    <TextView
-                        android:id="@+id/main_team"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@id/main_team_img"
-                        android:layout_alignLeft="@id/main_team_img"
-                        android:textColor="#000000" />
+
 
                     <LinearLayout
                         android:layout_width="200dp"
@@ -263,8 +256,8 @@
                 android:id="@+id/NBAList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:divider="@color/background_dim_overlay"
-                android:dividerHeight="8dp">
+                android:divider="@null"
+                >
 
             </ListView>
 
